# QuickRebootPlugin

QuickReboot/: CMakeLists.txt  README.md  README.mdZone.Identifier  main.ymlZone.Identifier
QuickReboot/src/: main.c  main.yml
